--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@ body {
 h1{
 	padding-top: 20px;
 	font-family: 'Monoton', cursive;
+  
 }
 
 ul {
@@ -28,14 +29,18 @@ p {
 	font-size: 1.5em;
 }
 
-.App {
+div {
   text-align: center;
+}
+
+@media screen and (max-width: 500px){
+  .am {
+    display: none;
+  }
 }
 
 
 .App-header {
-  height: 83px;
-  background-size: contain;
   font-size: 1.5em;
 }
 
@@ -46,6 +51,7 @@ p {
   margin-top: 3px;
   margin-bottom: 39px;
   font-family: 'Monoton', cursive;
+  animation-delay: 2s;
 }
 
 section.am {
