--- a/css/styles.css
+++ b/css/styles.css
@@ -324,6 +324,10 @@ p.prp {
 
 }
 
+.box11 {
+    font-size: 30px;
+}
+
 
 .icons { 
   padding: 0;
@@ -356,7 +360,6 @@ section.am:hover{
   width: 100%;
   height: 100%;
   border: none;
-  font: normal 100%/normal Arial, Helvetica, sans-serif;
   color: rgb(255, 255, 255);
   -o-text-overflow: clip;
   text-overflow: clip;
