--- a/css/styles.css
+++ b/css/styles.css
@@ -184,7 +184,7 @@ p.infop {
 }
 
 .app5 {
-  background-image: url(../images/icon.jpg);
+  background-image: url(../images/r.jpg);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
