--- a/css/styles.css
+++ b/css/styles.css
@@ -171,7 +171,7 @@ p.infop {
 }
 
 .app4 {
-  background-image: url(../images/samplerdj-loaded.png);
+  background-image: url(../images/Caddy.png);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
