--- a/css/styles.css
+++ b/css/styles.css
@@ -8,51 +8,21 @@ body {
     font-family: 'Bungee', cursive;
 }
 
-h1{
-  padding-top: 20px;
-  font-size: 1.2em;
-  text-align: initial;
-  width: 30%;
-  padding-left: 33px;
+a{
   
+  text-align: center;
+  color: black;
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+a:hover {
+  background-color: lightgrey;
 }
 
 ul {
     display: flex;
     list-style-type: none;
-}
-
-
-a {
-  color: black;
-
-}
-
-p {
-  font-size: 1.5em;
-}
-
-
-
-@media screen and (max-width: 500px){
-  ul.what{
-    display: block;
-    float: initial;
-  }
-  p.hard{
-    font-size: 3em;
-  }
-
-  div.cont1 {
-      font-size: 1.3em;
-    }
-    ul {
-    display: inline;
-    }
-    h1{
-      font-size: 1.6em;
-    }
-    
 }
 
 ul.h {
@@ -68,11 +38,6 @@ ul.ca {
 }
 
 
-.App-header {
-  font-size: 1.5em;
-
-}
-
 .hi{
   -webkit-animation-delay: 1.5s;
           animation-delay: 1.5s;
@@ -84,43 +49,89 @@ ul.ca {
 }
 
 
-span.hu {
+.hu {
     padding: 9px;
 }
 
+.what {
+    
+    display: inline-flex;
+    float: right;
+    padding-right: 33px;
 
-.hard {
-  color: white;
-  font-family: 'Monoton', cursive;
-  text-align: center;
-  font-size: 6em;
 }
 
-section.am {
-    padding-top: 133px;
-    padding-bottom: 133px;
-    text-align: center;
-    background-image: url(../images/modular.jpg);
-}
 
-section.mo {
-    padding-top: 133px;
-    padding-bottom: 133px;
-    text-align: center;
-    background-image: url(../images/moo.jpg);
-}
 
-section.ma {
-    text-align: center;
-    font-size: x-large;
+a.start {
+    font-size: 90px;
+    margin: 50px;
     padding-top: 30px;
-    color: white;
+    padding-right: 365px;
+    padding-left: 365px;
+    position: absolute;
+    font-family: 'Monoton';
+    text-overflow: ellipsis;
+    color: rgba(255,255,255,1);
+    text-shadow: 0 0 10px rgb(187, 212, 230), 0 0 20px rgb(245, 255, 80), 0 0 30px rgb(230, 224, 19), 0 0 40px rgba(141,200,221,1), 0 0 70px rgba(141,200,221,1), 0 0 80px rgba(141,200,221,1), 0 0 100px rgba(141,200,221,1), 0 0 150px rgba(141,200,221,1);
 }
 
-section.stuff {
-    display: block;
-    text-align: center;
+.icons { 
+  float: right;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
 }
+.icons > li {
+    margin: 1.25rem 5px;
+}
+
+.fa {
+  font-size: 30px;
+}
+
+
+@media screen and (max-width: 500px){
+ 
+   ul {
+    display: inline;
+  }
+   
+  .h {
+       display: -webkit-inline-box;
+       display: -ms-inline-flexbox;
+       display: inline-flex;
+       padding: 20px;
+       font-size: 1em;
+   }
+   a.start {
+       font-size: 30px;
+       margin: 50px;
+       padding-top: 30px;
+       padding-right: 65px;
+       padding-left: 65px;
+       position: absolute;
+   }
+
+  .icons { 
+    float: none;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+  }
+    
+}
+
+.apps{
+  display: none;
+}
+
+.work{
+  display: none;
+  text-align: center;
+  padding: 30px;
+}
+
 
 p.infop {
     font-size: 15px;
@@ -132,7 +143,7 @@ p.infop {
 }
 
 .app {
-  background-image: url(../images/nm.png);
+  background-image: url(../assets/images/nm.png);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
@@ -145,7 +156,7 @@ p.infop {
 }
 
 .app2 {
-  background-image: url(../images/icon.png);
+  background-image: url(../assets/images/icon.png);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
@@ -158,7 +169,7 @@ p.infop {
 }
 
 .app3 {
-  background-image: url(../images/vz.png);
+  background-image: url(../assets/images/vz.png);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
@@ -171,7 +182,7 @@ p.infop {
 }
 
 .app4 {
-  background-image: url(../images/Caddy.png);
+  background-image: url(../assets/images/Caddy.png);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
@@ -184,7 +195,7 @@ p.infop {
 }
 
 .app5 {
-  background-image: url(../images/r.jpg);
+  background-image: url(../assets/images/r.jpg);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
@@ -197,7 +208,7 @@ p.infop {
 }
 
 .app6 {
-  background-image: url(../images/sdm.png);
+  background-image: url(../assets/images/sdm.png);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
@@ -209,238 +220,11 @@ p.infop {
   padding: 30px;
 }
 
-.pic {
-  background-image: url(../images/ido.png);
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-  height: 530px;
-  margin-top: 12px;
-  margin-bottom: 12px;
-}
-
-.ido {
- padding-top: 100px;
-
-}
-
-h2.ido {
-    font-size: 2em;
-    padding-top: 60px;
-    padding-bottom: 60px;
-}
-
-p.idoo {
-    padding-top: 33px;
-}
-
-.cont{ 
-
-  padding-top: 160px; 
-  font-size: 3em;
-
-}
-
-.textl{
-  font-size: 0.8em;
-  padding: 10px;
-}
-
-
-.container {
-    text-align: center;
-    padding-top: 100px;
-}
-
-
-.what {
-    
-    display: inline-flex;
-    float: right;
-    padding-right: 33px;
-
-}
-
-
-.box1{
-  border-spacing: 30px;
-  padding: 10px;
-  margin: 10px;
-  font-size: 25px
-}
-
-.box12{
-  border-spacing: 30px;
-  padding: 10px;
-  margin: 10px;
-  font-size: 25px
-}
-
-.box1:hover {
-  background-color: lightgrey;
+p.infop {
+    font-size: 15px;
+    padding-top: 15px;
 }
 
 h3 {
     padding-top: 180px;
 }
-
-
-.box2{
-  border-spacing: 30px;
- 
-  padding: 10px;
-  margin: 10px;
-}
-
-.box2:hover {
-  background-color: lightgrey;
-}
-
-.box3{
-  border-spacing: 30px;
- 
-  padding: 10px;
-  margin: 10px;
-}
-
-.box3:hover {
- background-color: lightgrey;
-}
-
-.cont1 {
-    padding-top: 30px;
-    font-size: 2em;
-}
-
-section.pro {
-    font-size: 3em;
-    padding-bottom: 51px;
-}
-
-.scene {
-  width: 300px;
-  height: 300px;
-  margin: 75px auto 0;
-  perspective: 1200px;
-}
-
-.cube {
-  position: relative;
-  width: 300px;
-  height: 300px;
-  transform-style: preserve-3d;
-  animation: example 19s linear infinite;
-}
-
-.cube:hover {
-  animation:paused;
-}
-
-.side {
-  position: absolute;
-  width: 300px;
-  height: 300px;
-  box-sizing: border-box;
-  border: 5px solid #9aa;
-  background-color: rgba(32, 170, 151, 0.5);
-  padding: 120px 0;
-  font: 50px/1;
-  color: #fff;
-  text-transform: uppercase;
-  text-align: center;
-}
-
-.back {
-  transform: translateZ(-150px);
-}
-.top {
-  transform: translateY(-150px) rotateX(90deg);
-}
-.bottom {
-  transform: translateY(150px) rotateX(90deg);
-}
-.front {
-  transform: translateZ(150px);
-}
-.top, .bottom {
-  background-color: rgba(105, 136, 190, 0.5)
-}
-
-@keyframes example {
-  100% { transform: rotateX(360deg) rotateY(90deg); }
-  
-
-}
-
-p.prp {
-    padding-bottom: 100px;
-
-}
-
-.prp2 {
-    padding-top: 225px;
-    text-align: center;
-
-}
-
-.box11 {
-    font-size: 30px;
-}
-
-
-.icons { 
-  padding: 0;
-  color: white;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-}
-.icons > li {
-    width: 2.5rem;
-    margin: 1.25rem 5px;
-    padding: 0.625rem 0;
-}
-
-.fa {
-  font-size: x-large;
-}
-
-footer.footer {
-    text-align: center;
-    background-color: black;
-    background: rgb(218, 218, 218);
-}
-
-
-section.am:hover{
-  -webkit-box-sizing: content-box;
-  -moz-box-sizing: content-box;
-  box-sizing: content-box;
-  width: 100%;
-  height: 100%;
-  border: none;
-  color: rgb(255, 255, 255);
-  -o-text-overflow: clip;
-  text-overflow: clip;
-  background: -webkit-linear-gradient(-234deg, rgb(67,20,72) 4%, rgba(0,0,0,0) 4%), -webkit-linear-gradient(54deg, rgb(67,20,72) 4%, rgba(0,0,0,0) 4%), -webkit-linear-gradient(18deg, rgb(227,215,191) 8.5%, rgba(0,0,0,0) 8.5%), -webkit-linear-gradient(-198deg, rgb(227,215,191) 8.5%, rgba(0,0,0,0) 8.5%), -webkit-linear-gradient(-126deg, rgb(227,215,191) 7.5%, rgba(0,0,0,0) 7.5%), -webkit-linear-gradient(-54deg, rgb(227,215,191) 7.5%, rgba(0,0,0,0) 7.5%), -webkit-linear-gradient(-234deg, rgb(67,20,72) 4%, rgba(0,0,0,0) 4%), -webkit-linear-gradient(54deg, rgb(67,20,72) 4%, rgba(0,0,0,0) 4%), -webkit-linear-gradient(18deg, rgb(227,215,191) 8.5%, rgba(0,0,0,0) 8.5%), -webkit-linear-gradient(-198deg, rgb(227,215,191) 8.5%, rgba(0,0,0,0) 8.5%), -webkit-linear-gradient(-126deg, rgb(227,215,191) 7.5%, rgba(0,0,0,0) 7.5%), -webkit-linear-gradient(-54deg, rgb(227,215,191) 7.5%, rgba(0,0,0,0) 7.5%), rgba(88,211,201,1);
-  background: -moz-linear-gradient(324deg, rgb(67,20,72) 4%, rgba(0,0,0,0) 4%), -moz-linear-gradient(36deg, rgb(67,20,72) 4%, rgba(0,0,0,0) 4%), -moz-linear-gradient(72deg, rgb(227,215,191) 8.5%, rgba(0,0,0,0) 8.5%), -moz-linear-gradient(288deg, rgb(227,215,191) 8.5%, rgba(0,0,0,0) 8.5%), -moz-linear-gradient(216deg, rgb(227,215,191) 7.5%, rgba(0,0,0,0) 7.5%), -moz-linear-gradient(144deg, rgb(227,215,191) 7.5%, rgba(0,0,0,0) 7.5%), -moz-linear-gradient(324deg, rgb(67,20,72) 4%, rgba(0,0,0,0) 4%), -moz-linear-gradient(36deg, rgb(67,20,72) 4%, rgba(0,0,0,0) 4%), -moz-linear-gradient(72deg, rgb(227,215,191) 8.5%, rgba(0,0,0,0) 8.5%), -moz-linear-gradient(288deg, rgb(227,215,191) 8.5%, rgba(0,0,0,0) 8.5%), -moz-linear-gradient(216deg, rgb(227,215,191) 7.5%, rgba(0,0,0,0) 7.5%), -moz-linear-gradient(144deg, rgb(227,215,191) 7.5%, rgba(0,0,0,0) 7.5%), rgba(88,211,201,1);
-  background: linear-gradient(324deg, rgb(67,20,72) 4%, rgba(0,0,0,0) 4%), linear-gradient(36deg, rgb(67,20,72) 4%, rgba(0,0,0,0) 4%), linear-gradient(72deg, rgb(227,215,191) 8.5%, rgba(0,0,0,0) 8.5%), linear-gradient(288deg, rgb(227,215,191) 8.5%, rgba(0,0,0,0) 8.5%), linear-gradient(216deg, rgb(227,215,191) 7.5%, rgba(0,0,0,0) 7.5%), linear-gradient(144deg, rgb(227,215,191) 7.5%, rgba(0,0,0,0) 7.5%), linear-gradient(324deg, rgb(67,20,72) 4%, rgba(0,0,0,0) 4%), linear-gradient(36deg, rgb(67,20,72) 4%, rgba(0,0,0,0) 4%), linear-gradient(72deg, rgb(227,215,191) 8.5%, rgba(0,0,0,0) 8.5%), linear-gradient(288deg, rgb(227,215,191) 8.5%, rgba(0,0,0,0) 8.5%), linear-gradient(216deg, rgb(227,215,191) 7.5%, rgba(0,0,0,0) 7.5%), linear-gradient(144deg, rgb(227,215,191) 7.5%, rgba(0,0,0,0) 7.5%), rgba(88,211,201,1);
-  background-position: -70px 43px, 30px 43px, 30px 43px, -70px 43px, -70px 23px, 30px 23px, -20px 93px, 80px 93px, 80px 93px, -20px 93px, -20px 73px, 80px 73px;
-  -webkit-background-origin: padding-box;
-  background-origin: padding-box;
-  -webkit-background-clip: border-box;
-  background-clip: border-box;
-  -webkit-background-size: 100px 100px;
-  background-size: 100px 100px;
-  animation: anit 300ms infinite;
-}
-
-@keyframes anit {
-    from {background-position: 0 0, 0 0, 40px 70px, 40px 70px, 0 0, 40px 70px;}
-    to {background-position: 10 0, 30 0, 90px 10px, 30px 110px, 10 0, 20px 30px;}
-}
-
-
-
-
-
