--- a/css/styles.css
+++ b/css/styles.css
@@ -132,11 +132,23 @@ li.twitter {
     display: -ms-inline-flexbox;
     display: inline-flex;
   }
+
+  .expob {
+      margin-top: 60px;
+      padding-top: 70px;
+  }
+
+  .app3{
+    display: inherit;
+  }
     
 }
 
 .apps{
   display: none;
+  text-align: center;
+  padding: 10px;
+  font-size: 30px;
 }
 
 .work{
@@ -179,7 +191,7 @@ p.infop {
   margin-top: 60px;
   margin-bottom: 12px;
   text-align: center;
-  display: inline-block;
+/*  display: inline-block;*/
   padding: 30px;
 }
 
@@ -214,7 +226,7 @@ p.infop {
     background-color: lightgrey;
 }
 
-h3 {
+.appH {
     padding-top: 180px;
 }
 
@@ -234,6 +246,6 @@ h2:hover {
 
 .expob {
     margin-top: 60px;
-    padding-top: 0px;
+    padding-top: 20px;
 }
 
