--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,8 @@ a{
   margin-right: 30px;
  }
 
+
+
 a:hover {
   background-color: lightgrey;
 }
@@ -83,13 +85,18 @@ ul.ca {
 }
 .icons > li {
     margin: 1.25rem 5px;
-/*    padding-right: 30px;
-    padding-left: 30px;*/
 }
 
-li.twitter {
+.twitter {
     font-size: 20px;
 }
+
+.twitter:hover {
+  background-color: lightgrey;
+
+}
+
+
 
 
 @media screen and (max-width: 500px){
@@ -248,4 +255,13 @@ h2:hover {
     margin-top: 60px;
     padding-top: 20px;
 }
+
+.textInfo {
+    position: absolute;
+    display: none;
+    font-size: 10px;
+}
+
+
+
 
